--- a/char_driver/Makefile
+++ b/char_driver/Makefile
@@ -3,8 +3,8 @@ obj-m := sample_char_driver.o
 obj-m := char_drv_fops.o
 obj-m := char_driv_fops.o
 obj-m := char_drv_ioctl.o
-# only the last .o file is compiled, if we use obj-m += xyz, multiple .o files can be compiled
-obj-m :=  char_drv_fops.o
+# only the last .o file is compiled, if we use obj-m += xyz.o, multiple .o files can be compiled
+obj-m := char_drv_fops.o
 
 HOST_KERN_DIR = /lib/modules/$(shell uname -r)/build/
 
